--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -25,7 +25,7 @@ p {
     margin-top: 20em;
 }
 
-.container-login {
+.container-signup {
     max-width: 350px;
     margin: 0 auto;
     margin-top: 1em;
@@ -47,16 +47,12 @@ p {
     align-items: center;
 }
 
-.container-signup {
-    padding: .5em 0;
-}
-
 .logo {
     max-width: 100%;
     margin-top: 3em;
 }
 
-.input-login {
+.container-signup__input {
     width: 100%;
     margin-bottom: .5em;
     background-color: #fafafa;
