--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,7 +6,7 @@ button {
 }
 
 header {
-    background-color: #fff;
+    background-color: #181818;
     border-bottom: 1px solid #dbdbdb;
 }
 
@@ -17,7 +17,8 @@ header {
     padding: 0 1.5em;
 
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .container-buttons {
@@ -25,13 +26,13 @@ header {
     align-items: center;
 }
 
-.container-buttons__button-login, .container-buttons__button-home {
+.container-buttons__button-login {
     width: 6em;
     height: 2.2em;
     padding: 0;
     margin-right: 1em;
     color: #fff;
-    background-color: #0095f6;
+    background-color: gray;
     border: none;
     border-radius: 4px;
 }
