--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,15 +6,14 @@ button {
 }
 
 header {
-    background-color: #181818;
-    border-bottom: 1px solid #dbdbdb;
+    background-color: #494949;
+    /* border-bottom: 1px solid #dbdbdb; */
 }
 
 .container-header {
-    max-width: 975px;
+    max-width: 1280px;
     height: 5.5rem;
     margin: 0 auto;
-    padding: 0 1.5em;
 
     display: flex;
     justify-content: space-between;
@@ -41,7 +40,6 @@ header {
     width: 6em;
     height: 2.2em;
     padding: 0;
-    margin-right: 1em;
     color: #000;
     background-color: #fff;
     border: none;
