--- a/src/styles/UploadedAlbums.css
+++ b/src/styles/UploadedAlbums.css
@@ -1,5 +1,21 @@
+ /* Typography */
+
+ .album__album-title {
+    font-size: 1.4rem;
+    color: #343434;
+    font-weight: 700;
+}
+
+.album__album-artist {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: #505050;
+}
+
+/* Layout */
+ 
  .container-main {
-    max-width: 975px;
+    max-width: 1000px;
     margin: 0 auto;
     margin-top: 2em;
 
@@ -7,20 +23,57 @@
  }
  
  .container-albums {
-    max-width: 650px;
+    max-width: 1000px;
     margin: 0 auto;
     /* border: 1px solid coral; */
 
     display: grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-gap: 1em;
+    grid-template-columns: repeat(5, 175px);
+    grid-gap: 2em;
 }
 
 .container-albums__album {
-    /* border: 1px solid; */
+    /* border: 1px solid black; */
+    /* background-color: cornsilk; */
+    border-radius: 4px;
+    padding-top: 1.25rem;
+    transition: all .35s ease-in-out;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
+}
+
+.container-albums__album:hover {
+    background-color: #cecece;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.heading-recently-added-albums {
+    margin-left: 1.25rem;
+}
+
+.album__cover {
+    margin-bottom: 1.6rem;
+    border-radius: 4px;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    /* box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5); */
+}
+
+/* Handle text overflow */
+.album__album-title, .album__album-artist {
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.album__album-title {
+    margin: 0;
+}
+
+.album__album-artist {
+    margin-top: .4rem;
 }
