--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,8 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #343434;
   font-size: 1rem;
-  background-color: #fafafa;
+  background-color: #f2f2f2;
 }
