--- a/src/styles/UploadedAlbums.css
+++ b/src/styles/UploadedAlbums.css
@@ -13,11 +13,15 @@
 }
 
 /* Layout */
+
+.container-uploaded-albums-main {
+    border: 5px solid royalblue;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
  
- .container-main {
-    max-width: 1000px;
-    width: 95%;
-    margin: 0 auto;
+ .container-uploaded-albums {
     margin-top: 2em;
 
     border: 1px solid gray;
@@ -25,6 +29,10 @@
     display: flex;
     flex-direction: column;
  }
+
+ .heading-uploaded-albums {
+    margin-left: 1.2rem;
+}
  
  .container-albums {
     /* max-width: 955px; */
@@ -36,34 +44,6 @@
     grid-template-columns: repeat(5, 175px);
     grid-gap: 2em;
 }
-
-@media (min-width:500px) {
-    .container-albums {
-        grid-template-columns: repeat(2, 175px);
-    } 
-}
-
-@media (min-width:600px) {
-    .container-albums {
-        grid-template-columns: repeat(3, 175px);
-    } 
-}
-
-@media (min-width:800px) {
-    .container-albums {
-        /* max-width: 800px; */
-        grid-template-columns: repeat(4, 175px);
-    }  
-}
-
-@media (min-width:975px) {
-    .container-albums {
-        /* max-width: 975px; */
-        grid-template-columns: repeat(5, 175px);
-    }   
-}
-
-
 
 .container-albums__album {
     /* border: 1px solid black; */
@@ -84,9 +64,9 @@
     cursor: pointer;
 }
 
-.heading-recently-added-albums {
+/* .heading-recently-added-albums {
     margin-left: 3.4rem;
-}
+} */
 
 .album__cover {
     margin-bottom: 1.6rem;
@@ -109,4 +89,32 @@
 
 .album__album-artist {
     margin-top: .4rem;
+}
+
+/* Media queries */
+
+@media (min-width:500px) {
+    .container-albums {
+        grid-template-columns: repeat(2, 175px);
+    } 
+}
+
+@media (min-width:600px) {
+    .container-albums {
+        grid-template-columns: repeat(3, 175px);
+    } 
+}
+
+@media (min-width:800px) {
+    .container-albums {
+        /* max-width: 800px; */
+        grid-template-columns: repeat(4, 175px);
+    }  
+}
+
+@media (min-width:1100px) {
+    .container-albums {
+        /* max-width: 975px; */
+        grid-template-columns: repeat(5, 175px);
+    }   
 }
