--- a/src/styles/UploadedAlbums.css
+++ b/src/styles/UploadedAlbums.css
@@ -18,7 +18,7 @@
     border: 5px solid royalblue;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
 }
  
  .container-uploaded-albums {
@@ -36,7 +36,7 @@
  
  .container-albums {
     /* max-width: 955px; */
-    margin: 0 auto;
+    /* margin: 0 auto; */
     border: 1px solid coral;
     /* background-color: teal; */
 
