Style default 'choose file' button

--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -31,7 +31,7 @@
 
 label {
     font-size: 1.5rem;
-    font-weight: 600;
+    font-weight: 700;
 
     margin-top: 0.2em;
 
@@ -41,6 +41,7 @@ label {
 
 input {
     font-family: inherit;
+    font-size: 1.3rem;
     margin-bottom: 1.5em;
     margin-top: 0.8em;
     padding: 0.7em;
@@ -63,6 +64,22 @@ input {
     border: none;
 }
 
+/* hide default "choose file" button*/
+input[type="file"] {
+    display: none;
+}
+
+/* style input element instead */
+.form-upload__label-upload-album-image {
+    text-align: center;
+    margin-bottom: 1.5em;
+    padding: 0.5em;
+    border: 1px solid #c0c0c0;
+    border-radius: 10px;
+    box-shadow: 2px 2px 0px rgba(0,0,0,0.16);
+    cursor: pointer;
+}
+
 .form-upload__image-uploaded-album {
     max-width: 300px;
     margin-bottom: 2em;
@@ -79,7 +96,7 @@ input {
     margin-bottom: 1em;
     padding: 1em 1em 1em 0;
 
-    font-weight: 300;
+    font-weight: 700;
     font-size: 1.4rem;
 
     display: flex;
@@ -87,14 +104,22 @@ input {
     align-items: center;
 }
 
-.form-upload__btn-submit {
+.form-upload__label-add-to-my-collection:hover {
+    cursor: pointer;
+}
+
+.form-upload__btn-upload {
     font-family: inherit;
+    font-size: 1.5rem;
+    font-weight: 700;
+    
     padding: 0.5em;
     border: 1px solid #c0c0c0;
     border-radius: 10px;
     box-shadow: 2px 2px 0px rgba(0,0,0,0.16);
 }
 
-.form-upload__btn-submit:hover {
+.form-upload__btn-upload:hover, 
+.form-upload__label-upload-album-image:hover {
     background-color:  #d4d4d4;
 }
