--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@ html {
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   color: #343434;
   font-size: 1rem;
   background-color: #f2f2f2;
