--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,24 +1,4 @@
 
-.header__logo {
-    font-family: inherit;
-    font-size: 2.2rem;
-    font-weight: 400;
-    text-decoration: none;
-    color: #fff;
-
-}
-
-.header__link {
-    text-decoration: none;
-}
-
-button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    font-size: 1.4rem;
-    cursor: pointer;
-}
-
 header {
     background-color: #494949;
     /* border-bottom: 1px solid #dbdbdb; */
@@ -38,7 +18,55 @@ header {
     align-items: center;
 }
 
+.header__container-search {
+    /* border: 3px solid salmon; */
+    width: 400px;
+
+    display: flex;
+    align-items: center;
+}
+
+.header__form-search {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.header__input-search {
+    margin: 0;
+    border: none;
+    border-radius: 100px;
+    width: 100%;
+    font-weight: 400;
+}
+
+.header__input-search::placeholder {
+    padding-left: 1em;
+}
+
+.header__logo {
+    margin-right: 2em;
+    font-family: inherit;
+    font-size: 2.2rem;
+    font-weight: 400;
+    text-decoration: none;
+    color: #fff;
+}
+
+.header__link {
+    text-decoration: none;
+}
+
+button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
+
 .header__container-buttons {
+    /* border: 3px solid seashell; */
+
     display: flex;
     align-items: center;
 }
