--- a/src/styles/AlbumDetails.css
+++ b/src/styles/AlbumDetails.css
@@ -10,7 +10,7 @@
     border: 1px solid #c0c0c0;
 
     /* background-color: #fff; */
-    border-radius: 10px;
+    border-radius: 0 10px 10px 0;
     box-shadow: 0 3px 5px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
